# th-inventory-reconciliation

./: .gitignore  CLAUDE.md  NOTES.md  pyproject.toml  requirements-dev.txt  requirements.txt
.specify/memory/: constitution.md
specs/001-inventory-reconciliation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-inventory-reconciliation/checklists/: requirements.md
specs/001-inventory-reconciliation/contracts/: input-schema.md  output-schema.json
src/: __init__.py  cli.py  reconcile.py
src/models/: __init__.py  inventory_item.py  quality_issue.py  reconciliation_result.py  report.py
src/schemas/: __init__.py  inventory_schema.py
src/services/: __init__.py  loader.py  normalizer.py  quality_checker.py  reconciler.py  reporter.py
tests/: __init__.py  conftest.py
tests/fixtures/: expected_output.json  snapshot_clean.csv  snapshot_with_changes.csv  snapshot_with_issues.csv
tests/integration/: __init__.py  test_full_reconciliation.py
tests/unit/: __init__.py  test_normalizer.py  test_quality_checker.py  test_reconciler.py  test_reporter.py
